--- a/DataMastersML/DataMastersMLWebApi/DataMastersMLWebApi.csproj
+++ b/DataMastersML/DataMastersMLWebApi/DataMastersMLWebApi.csproj
@@ -4,6 +4,7 @@
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.ML" Version="1.5.5" />
     <PackageReference Include="Microsoft.ML.DataView" Version="3.0.0" />
     <PackageReference Include="Microsoft.ML.LightGbm" Version="1.7.1" />
